--- a/JobsNow.css
+++ b/JobsNow.css
@@ -43,7 +43,10 @@ html, body {
 /* Photo équipe */
 
 #photoEquipe {
-	align-content: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
 }
 
 /* Footer */
@@ -53,7 +56,7 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: black;
+    background-color: #333;
     color: white;
     text-align: center;
 }
