--- a/JobsNow.css
+++ b/JobsNow.css
@@ -15,12 +15,12 @@ html, body {
 
 /* Liens du menu */
 
-.topnav {
+header {
     background-color: #333;
     overflow: hidden;
 }
 
-.topnav a {
+header a {
     float: left;
     display: block;
     color: #f2f2f2;
@@ -30,7 +30,7 @@ html, body {
     font-size: 17px;
 }
 
-.topnav a:hover {
+header a:hover {
     background-color: #ddd;
     color: black;
 }
@@ -49,14 +49,30 @@ html, body {
     width: 100%;
 }
 
+/* Présentation équipe */
+
+#divPresentationEquipe {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    text-align : center;
+}
+
 /* Footer */
 
 footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
     background-color: #333;
-    color: white;
+    overflow: hidden;
+    margin-bottom: 0px;
+}
+
+footer a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
     text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
 }
