--- a/JobsNow.css
+++ b/JobsNow.css
@@ -40,23 +40,37 @@ header a:hover {
     color: white;
 }
 
-/* Photo équipe */
+/* Photo JN */
 
-#photoEquipe {
+#photoJN {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 100%;
 }
 
-/* Présentation équipe */
+/* Présentation JN */
 
-#divPresentationEquipe {
+#divPresentationJN {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 80%;
     text-align : center;
+}
+
+/* Présentation de l'équipe */
+
+#divEquipe {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    text-align : center;
+}
+
+.membreEquipe {
+    display: flex;
 }
 
 /* Footer */
