--- a/PageTest.css
+++ b/PageTest.css
@@ -8,16 +8,16 @@
         }
 
         html, body {
-            margin: 0;
-            padding : 0;
-            outline: 0;
-            height: 100%;
-            width: %;
+        	margin: 0;
+        	padding : 0;
+        	outline: 0;
+        	height: 100%;
+        	width: %;
         }
 
     /* Barre de navigation */
 
-        .topnav {
+        header {
             background-color: #191B0F;
             overflow: hidden;
             height : 60px;
@@ -28,7 +28,7 @@
             height: 40px;
         }
 
-        .topnav a {
+        header a {
             float: left;
             display: block;
             color: #f2f2f2;
@@ -40,13 +40,35 @@
             height: 60px;
         }
 
-        .topnav a:hover {
+        header a:hover {
             background-color: #ddd;
             color: black;
         }
 
         .topnav .icon {
             display: none;
+        }
+
+        @media screen and (max-width: 800px) {
+        .topnav a:not(:first-child) {display: none;}
+        .topnav a.icon {
+            float: right;
+            display: block;
+            }
+        }
+
+        @media screen and (max-width: 800px) {   
+            .topnav.responsive {position: relative;}
+            .topnav.responsive a.icon {
+                position: absolute;
+                right: 0;
+                top: 0;
+            }
+            .topnav.responsive a {
+                float: none;
+                display: block;
+                text-align: left;
+            }
         }
 
     /* Footer */
@@ -57,8 +79,6 @@
             margin-bottom: 0px;
             display:flex;
             justify-content: center;
-            position: absolute;
-            width: 100%;
 
         }
 
@@ -129,15 +149,6 @@
             margin-left: auto;
             margin-right: auto;
             width: 100%;
-        }
-
-        button {
-            border-radius: 5px;
-            color: white;
-            background-color: #F9B129;
-            border : none;
-            width: 200px;
-            padding: 8px;
         }
 
     /* Présentation de l'équipe */
@@ -288,10 +299,6 @@
         }
 
 /* CSS PAGE 5 : NOUS CONTACTER */
-
-        .divFormulaire {
-            height: 100%;
-        }
 
 
 
