--- a/JobsNow.css
+++ b/JobsNow.css
@@ -12,7 +12,12 @@
             padding : 0;
             outline: 0;
             height: 100%;
-            width: %;
+        }
+
+        .ContenuSansFooter{
+            margin-bottom: 48.8px;
+            position: relative;
+            min-height: 100%;
         }
 
     /* Barre de navigation */
@@ -54,8 +59,9 @@
             margin-bottom: 0px;
             display:flex;
             justify-content: center;
-            position: absolute;
             width: 100%;
+            height: 48.8px;
+            position: absolute;
 
         }
 
