Footer fixé en bas Intellij

--- a/JobsNow/src/main/webapp/WEB-INF/templates/Page3.Partenaires.html
+++ b/JobsNow/src/main/webapp/WEB-INF/templates/Page3.Partenaires.html
@@ -17,9 +17,10 @@
 	</script>
 
 	<!-- Contenu du site -->
+	<div class="ContenuSansFooter">
 
-		<!-- Barre de navigation -->
-	<div class="topnav" id="myTopnav" th:insert="~{Fragments::barre_navigation}"></div>
+	<!-- Barre de navigation -->
+		<div class="topnav" id="myTopnav" th:insert="~{Fragments::barre_navigation}"></div>
 
 		<!-- Partenaires -->
 		<div id="divPartenaires">
@@ -61,14 +62,15 @@
 				</div>
 			</div>
 		</div>
+	</div>
 
-		<!-- Footer -->
-		<footer>
-			<a href="https://www.facebook.com/Jobs-Now-1662202004073313/">Facebook</a>
-			<a href="LinkedinUrl">LinkedIn</a>
-			<a href="Page5.NousContacter.html">Nous contacter</a>
-			<a href="Page7.MentionsLegales.html">Mentions légales</a>
-		</footer>
+	<!-- Footer -->
+	<footer>
+		<a href="https://www.facebook.com/Jobs-Now-1662202004073313/">Facebook</a>
+		<a href="LinkedinUrl">LinkedIn</a>
+		<a href="Page5.NousContacter.html">Nous contacter</a>
+		<a href="Page7.MentionsLegales.html">Mentions légales</a>
+	</footer>
 
 </body>
 </html>
