--- a/JobsNow/src/main/webapp/WEB-INF/templates/Page7.MentionsLegales.html
+++ b/JobsNow/src/main/webapp/WEB-INF/templates/Page7.MentionsLegales.html
@@ -17,17 +17,20 @@
 	</script>
 
 	<!-- Contenu du site -->
+	<div class="ContenuSansFooter">
 
 		<!-- Barre de navigation -->
 		<div class="topnav" id="myTopnav" th:insert="~{Fragments::barre_navigation}"></div>
 
-		<!-- Footer -->
-		<footer>
-			<a href="https://www.facebook.com/Jobs-Now-1662202004073313/">Facebook</a>
-			<a href="LinkedinUrl">LinkedIn</a>
-			<a href="Page5.NousContacter.html">Nous contacter</a>
-			<a href="Page7.MentionsLegales.html">Mentions légales</a>
-		</footer>
+	</div>
+
+	<!-- Footer -->
+	<footer>
+		<a href="https://www.facebook.com/Jobs-Now-1662202004073313/">Facebook</a>
+		<a href="LinkedinUrl">LinkedIn</a>
+		<a href="Page5.NousContacter.html">Nous contacter</a>
+		<a href="Page7.MentionsLegales.html">Mentions légales</a>
+	</footer>
 
 </body>
 </html>
