--- a/JobsNow/src/main/webapp/WEB-INF/templates/Page2.Annonces.html
+++ b/JobsNow/src/main/webapp/WEB-INF/templates/Page2.Annonces.html
@@ -30,8 +30,8 @@
 				<p>Date</p>
 				<p>Lieu</p>
 				<p>Tenue</p>
-				<p>Remuneration<p>
-				<p>Description<p>
+				<p>Remuneration</p>
+				<p>Description</p>
 				<div class="divBouton">
 					<button>Liker</button>
 					<button>Postuler</button>
@@ -42,8 +42,8 @@
 				<p>Date</p>
 				<p>Lieu</p>
 				<p>Tenue</p>
-				<p>Remuneration<p>
-				<p>Description<p>
+				<p>Remuneration</p>
+				<p>Description</p>
 				<div class="divBouton">
 					<button>Liker</button>
 					<button>Postuler</button>
@@ -54,8 +54,8 @@
 				<p>Date</p>
 				<p>Lieu</p>
 				<p>Tenue</p>
-				<p>Remuneration<p>
-				<p>Description<p>
+				<p>Remuneration</p>
+				<p>Description</p>
 				<div class="divBouton">
 					<button>Liker</button>
 					<button>Postuler</button>
@@ -66,8 +66,8 @@
 				<p>Date</p>
 				<p>Lieu</p>
 				<p>Tenue</p>
-				<p>Remuneration<p>
-				<p>Description<p>
+				<p>Remuneration</p>
+				<p>Description</p>
 				<div class="divBouton">
 					<button>Liker</button>
 					<button>Postuler</button>
