--- a/JobsNow/src/main/webapp/WEB-INF/templates/Page1.JobsNow.html
+++ b/JobsNow/src/main/webapp/WEB-INF/templates/Page1.JobsNow.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<title>JobsNow - Accueil</title>
 		<link rel="stylesheet" href="JobsNow.css">
-		<link rel="icon" type="image/png" href="images/logoYncrea.png"/>
+		<link rel="icon" type="image/png" href="images/logoJN.png"/>
 	</head>
 
 	<body>
@@ -22,7 +22,7 @@
 
 			<!-- Photo équipe JN -->
 			<div id="divPhotoJN">
-				<img src="images/photoEquipe.jpg" id="photoJN" alt="Couverture">
+				<img src="images/couvJN.jpg" id="photoJN" alt="Couverture">
 			</div>
 
 			<!-- Présentation de Jobs Now -->
