--- a/JobsNow/src/main/webapp/WEB-INF/templates/Page2.Annonces.html
+++ b/JobsNow/src/main/webapp/WEB-INF/templates/Page2.Annonces.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<title>JobsNow - Annonces</title>
 	<link rel="stylesheet" href="JobsNow.css">
-	<link rel="icon" type="image/png" href="images/logoYncrea.png"/>
+	<link rel="icon" type="image/png" href="images/logoJN.png"/>
 </head>
 
 <body>
