--- a/JobsNow/src/main/webapp/WEB-INF/templates/Fragments.html
+++ b/JobsNow/src/main/webapp/WEB-INF/templates/Fragments.html
@@ -9,7 +9,7 @@
 
             <div th:fragment="barre_navigation">
                     <a href="JobsNow">
-                        <img src="images/logoYncrea.png" id="logoJobsNow" alt="Jobs Now">
+                        <img src="images/logoJN.png" id="logoJobsNow" alt="Jobs Now">
                     </a>
                     <a href="JobsNow">JobsNow</a>
                     <a href="Annonces">Annonces</a>
