--- a/JobsNow/src/main/webapp/WEB-INF/templates/Page7.MentionsLegales.html
+++ b/JobsNow/src/main/webapp/WEB-INF/templates/Page7.MentionsLegales.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<title>JobsNow - Mentions légales</title>
 	<link rel="stylesheet" href="JobsNow.css">
-	<link rel="icon" type="image/png" href="images/logoYncrea.png"/>
+	<link rel="icon" type="image/png" href="images/logoJN.png"/>
 </head>
 
 <body>
