ajout de l'interface administrateur

--- a/JobsNow/src/main/webapp/WEB-INF/templates/Fragments.html
+++ b/JobsNow/src/main/webapp/WEB-INF/templates/Fragments.html
@@ -17,7 +17,7 @@
                     <a href="Temoignages">Témoignages</a>
                     <a href="Contact">Nous contacter</a>
 
-                    <a style="float:right" href="Connexion">Se connecter</a>
+                    <a style="float:right" href="SeConnecter">Se connecter</a>
             </div>
 
             <div th:fragment="footer">
