--- a/JobsNow/src/main/webapp/WEB-INF/templates/Page2.Annonces.html
+++ b/JobsNow/src/main/webapp/WEB-INF/templates/Page2.Annonces.html
@@ -35,7 +35,7 @@
 					<div style="margin-top: 1em; margin-bottom: 1em"><p style="display: inline">Formation : </p>			<p style="display: inline" th:text="${annonce.formation}"></p></div>
 					<div style="margin-top: 1em; margin-bottom: 1em"><p style="display: inline">Remuneration : </p> 		<p style="display: inline" th:text="${annonce.remuneration}"></p></div>
 					<div style="margin-top: 1em; margin-bottom: 1em"><p style="display: inline">Description : </p> 			<p style="display: inline" th:text="${annonce.description}"></p></div>
-				<div style="margin-top: 1em; margin-bottom: 1em"><form action="mail.php" method="post" enctype="text/plain">
+				<div style="margin-top: 1em; margin-bottom: 1em"><form action="mailgun" method="post" enctype="text/plain">
 					<input name="subject" type="hidden" th:value="${annonce.idAnnonce}+'+'+${annonce.titre}+'+'+${annonce.dateDebut}">
 					<div type="body">
 						<input name="nom" type="text" required placeholder="Nom" value="" class="input">
