--- a/JobsNow/src/main/webapp/WEB-INF/templates/Page2.Annonces.html
+++ b/JobsNow/src/main/webapp/WEB-INF/templates/Page2.Annonces.html
@@ -39,7 +39,7 @@
 					<input name="subject" type="hidden" th:value="${annonce.idAnnonce}+'+'+${annonce.titre}+'+'+${annonce.dateDebut}">
 					<div type="body">
 						<input name="nom" type="text" required placeholder="Nom" value="" class="input">
-						<input name="pénom" type="text" required placeholder="Prénom" value="" class="input">
+						<input name="prénom" type="text" required placeholder="Prénom" value="" class="input">
 						<input name="email" type="email" required placeholder="Email" value="" pattern=".+yncrea.fr" class="input">
 						<input name="telephone" type="text" required placeholder="Numéro de téléphone" value="" class="input">
 						<input type="submit" name="postuler" value="Je postule" class="inputButton">
